creating sections in the index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,10 @@
 <%- include ('partials/html-head.ejs') %>
 <%- include ('partials/navbar.ejs') %>
 <main>
+    <section>
+        
+    </section>
+    <section>
+        <img src="/public/images/circle.png">Text here</img>
+    </section>
 </main>
