--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,16 @@
 <nav>
-<a href=""></a>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="#">Explore Causes</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="#">Forum</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="#">Resources</a>
+        </li>
+    </ul>
 </nav>
