--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,6 @@
         
     </section>
     <section>
-        <img src="images/circle.png"> Text Here.
+        <img src="/public/images/circle.png">Text here</img>
     </section>
 </main>
