adding navbar components

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,10 @@
 <footer>
-    <img src="/public/images/logo.png"/>
+    <div>
+        <li>
+        <img src="/public/images/logo.png"/>
+        </li>
+        <li>
+        <p>Made by <a href="https:linkedin/sophiadavis">Sophia Davis</a> and <a href="https:linkedin/christine-davis-808">Christine Davis</a></p>
+        </li>
+    </div>
 </footer>
