--- a/views/causes/index.ejs
+++ b/views/causes/index.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/stylesheets/style.css">
-  <title><%= title %></title>
-</head>
+<%- include ('../partials/html-head.ejs') %>
+<%- include ('../partials/navbar.ejs') %>
 <body>
   <h1>The title is <%= title %></h1>
 
@@ -30,4 +23,4 @@
     <% }) %>
     <% } %>
 </body>
-</html>
+<%- include ('../partials/footer.ejs')
