--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -1,3 +1,6 @@
+<%- include ('../partials/html-head.ejs') %>
+<%- include ('../partials/navbar.ejs') %>
+
 <% if (!profiles.length) { %>
     <h2>No profiles here yet</h2>
 <% } else { %>
