--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,57 @@ body {
 a {
   color: #00B7FF;
 }
+
+main a{
+  color:#ff73d4;
+}
+
+.nav-link{
+  font-size:0.8rem;
+  color: black;
+  font-weight: 500;
+}
+main{
+  display: flex;
+  width: 100% !important;
+  height: 94vh !important;
+}
+.nav-link:hover{
+  color: black;
+  border-bottom-width: medium;
+  border-bottom-style: solid;
+  border-bottom-color: #ff73d4;
+  background-color: #fcd7f1;
+  transition-duration: 0.3s;
+}
+.social :hover{
+  color: #ff73d4;
+  transition-duration: 0.3s;
+}
+
+#project_page{
+  background-color: #cfeee9ff;
+}
+
+#project_sidebar{
+  background-color: #434343ff;
+  color: white;
+  font-size: 0.8rem;
+  overflow-y: auto;
+  padding: 2.5em;
+  height: 94vh;
+}
+
+#project_content{
+  background-color: #dbf8f3ff;
+  height: 94vh;
+  overflow-y: scroll;
+}
+#project_page_content{
+  min-height: 94vh;
+  max-height: 94vh;
+  background-color: white;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  padding:0.2vw;
+}
