--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,3 @@
 <%- include ('partials/html-head.ejs') %>
 <%- include ('partials/navbar.ejs') %>
-<main>
-    <section>
-        <img src="images/circle.png">Text here</img>
-    </section>
-</main>
+<%- include ('/partials/footer.ejs') %>
